# Distributed-Web-Crawling-and-Indexing-System-using-Cloud-Computing

./: .gitignore  README.md  aws_config.json  cloud_storage.py  crawlerNode.py  indexerNode.py  masterNode.py  monitoring_dashboard.py  monitoring_data.json  pyproject.toml  requirements.txt  run_system.bat  search_interface.py  setup_aws.py  setup_nltk.py
src/: crawler_node.py
src/crawdex/: __init__.py
templates/: dashboard.html  search.html
